3822B1PE4/9_gelu_ocl/kovalchuk_alexander/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/kovalchuk_alexander/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/kovalchuk_alexander/gelu_ocl.cpp:77:29: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   77 |         clCreateCommandQueue(context, device, 0, &err);
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/kovalchuk_alexander/gelu_ocl.cpp:4:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/kovalchuk_alexander/gelu_ocl.cpp:84:27: error: ‘strlen’ is not a member of ‘std’; did you mean ‘mbrlen’?
   84 |     size_t src_len = std::strlen(GELU_KERNEL_SRC);
      |                           ^~~~~~
      |                           mbrlen
